# qa-automation-framework

./: .bandit  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.appium  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  mobile-tests.yml  pwa-tests.yml  secret-detection.yml
docs/: ARCHITECTURE.md  MOBILE_SETUP.md  PWA_SETUP.md  SETUP.md
mobile/: .env.example  README.md  __init__.py  pytest.ini  requirements.txt
mobile/config/: __init__.py  appium_config.py  settings.py
mobile/data/: test_searches.yaml
mobile/src/: __init__.py
mobile/src/base/: __init__.py  base_page.py  base_test.py  wait_handler.py
mobile/src/driver/: __init__.py  driver_factory.py  driver_manager.py
mobile/src/models/: __init__.py  search_model.py
mobile/src/pages/: __init__.py  article_page.py  home_page.py  search_page.py
mobile/src/utils/: __init__.py  assertions.py  logger.py  screenshot.py
mobile/tests/: __init__.py  conftest.py  test_article.py  test_navigation.py  test_search.py
pwa/: .env.example  README.md  __init__.py  playwright.ini  requirements.txt
pwa/config/: __init__.py  browser_config.py  settings.py
pwa/data/: test_products.yaml
pwa/src/: __init__.py
pwa/src/base/: __init__.py  base_page.py  base_test.py  wait_handler.py
pwa/src/browser/: __init__.py  browser_factory.py  browser_manager.py
pwa/src/models/: __init__.py  product_model.py
pwa/src/pages/: __init__.py  cart_page.py  home_page.py  products_page.py
pwa/src/utils/: __init__.py  assertions.py  decorators.py  logger.py  screenshot.py
pwa/tests/: __init__.py  conftest.py  test_cart.py  test_navigation.py  test_products.py
scripts/: run_mobile_tests.sh  run_pwa_tests.sh  setup.sh
