[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-automation-framework"
version = "1.0.0"
description = "Production-ready QA automation framework for mobile (Appium) and PWA (Playwright) testing"
requires-python = ">=3.9"
authors = [
    {name = "Nikita Dronov", email = "contact@example.com"}
]
license = {text = "MIT"}
keywords = [
    "qa",
    "automation",
    "testing",
    "appium",
    "playwright",
    "pytest",
    "mobile",
    "pwa"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Acceptance",
]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["mobile", "pwa"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -v --strict-markers --tb=short"
testpaths = ["mobile/tests", "pwa/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "smoke: smoke tests",
    "regression: regression tests",
    "integration: integration tests",
    "slow: slow tests"
]
